--- a/Solys/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Solys/Assets/Plugins/Android/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-permission
-        android:name="com.xiaomi.sdk.permission.PAYMENT" />
+        android:name="com.xiaomi.sdk.permission.PAYMENT" tools:node="remove"/>
 
     <uses-permission
         android:name="android.permission.READ_PHONE_STATE" tools:node="remove"/>
@@ -50,7 +50,7 @@
         android:name="android.permission.GET_ACCOUNTS" tools:node="remove"/>
 
     <uses-permission
-        android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        android:name="android.permission.ACCESS_COARSE_LOCATION" tools:node="remove"/>
 
     <uses-permission
         android:name="android.permission.ACCESS_FINE_LOCATION" tools:node="remove"/>
